fix: change kickstarter banner location to avoid overlapping pcap

--- a/apps/client/src/app/app.component.less
+++ b/apps/client/src/app/app.component.less
@@ -15,7 +15,7 @@
 
 .back_banner {
   height: 90px;
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
 ::ng-deep .no-panel-borders {
